# esp32-modbus-gateway

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  findings.json  partitions.csv  sdkconfig.defaults
.claude/: settings.json
components/config/: CMakeLists.txt  nvs_config.c  nvs_config.h
components/display/: CMakeLists.txt  display_manager.c  display_manager.h  gateway_status.h  idf_component.yml  lcd_driver.c  lcd_driver.h  touch_driver.c  touch_driver.h  ui_main.c  ui_main.h  ui_modbus.c  ui_modbus.h  ui_ota.c  ui_ota.h  ui_system.c  ui_system.h
components/led/: CMakeLists.txt  led_indicator.c  led_indicator.h
components/modbus/: CMakeLists.txt  modbus_master.c  modbus_master.h  modbus_params.h  uart_config.c  uart_config.h
components/mqtt_app/: CMakeLists.txt  app_mqtt.h  mqtt_client.c
components/network/: CMakeLists.txt  dns_responder.c  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
components/ota/: CMakeLists.txt  ota_handler.c  ota_handler.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_mqtt.h  data_pipeline.c  data_pipeline.h  dns_responder.h  idf_component.yml  modbus_master.c  modbus_params.c  mqtt_client.c  mqtt_client.h  nvs_config.c  nvs_config.h  ota_handler.c  uart_config.c  web_config.html  web_server.c  wifi_manager.c
