idf_component_register(
    SRCS
        "app_main.c"
        "nvs_config.c"
        "wifi_manager.c"
        "web_server.c"
        "dns_responder.c"
        "uart_config.c"
        "modbus_master.c"
        "modbus_params.c"
        "mqtt_client.c"
        "data_pipeline.c"
    INCLUDE_DIRS
        "."
    EMBED_FILES
        "web_config.html"
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_http_server
        esp_event
        mqtt
        cjson
        driver
        lwip
)

# Set compile options for smaller binary
set_source_files_properties(
    app_main.c
    nvs_config.c
    wifi_manager.c
    web_server.c
    dns_responder.c
    uart_config.c
    modbus_master.c
    modbus_params.c
    mqtt_client.c
    data_pipeline.c
    PROPERTIES COMPILE_OPTIONS "-Os"
)
